# weather-cli

./: Cargo.toml  README.md  build.rs
proto/: weather.proto
src/: arg_parser.rs  commands.rs  main.rs  openweather_service.rs  weather_response.rs  weatherapi_service.rs
src/providers/: mod.rs  openweather.rs  weatherapi.rs
