[package]
name = "weather-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
clap = "3.1"
futures = "0.3.26"
futures-util = "0.3.26"
grpc = "0.8.3"
grpc-protobuf = "0.8.3"
home = "0.5.4"
multi_thread = "0.1.0"
prost = "0.11.8"
protobuf = "3.2.0"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0"
tokio = { version = "1.16", features = ["rt-multi-thread"] }
tonic = "0.8.3"

[build-dependencies]
protoc-rust-grpc = "0.8.3"
tonic-build = "0.8.4"
